--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the beloved 💘uvce mizo website💘",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
