--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "uvce-mizo-web",
+  "name": "backend-zirna",
   "version": "1.0.0",
-  "description": "This is the beloved 💘uvce mizo website💘",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon --ext ejs,js,json app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/opa-ralte/uvce-mizo-web.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/opa-ralte/uvce-mizo-web/issues"
-  },
-  "homepage": "https://github.com/opa-ralte/uvce-mizo-web#readme",
+  "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.16.4",
-    "morgan": "^1.10.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.16.0",
+    "morgan": "^1.10.0"
   }
 }
